--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Nick Proudfoot's Portfolio</title>
+    <title>Nicholas Proudfoot</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        Nick Proudfoot's Portfolio
+        Nicholas Proudfoot
       </h1>
 
       <ul class="section--social">
@@ -60,51 +60,7 @@
       </h2>
     </section>
 
-    <section class="section section--alignCentered section--description">
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving code"
-               class="section__exampleImage"
-               src="images/example1.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="A Serverless Portfolio"
-               class="section__exampleImage"
-               src="images/example2.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered ">
-              Serverless
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving cats"
-               class="section__exampleImage"
-               src="images/example3.png"/>
-          <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
-               https://www.flickr.com/photos/37287295@N00/2540855181 -->
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-    </section>
+    <div id="example-work"></div>
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
